--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,13 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link href='https://fonts.googleapis.com/css?family=League Spartan' rel='stylesheet'>
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/Main/navbar.css">
+    <link rel="stylesheet" href="./assets/css/Main/footer.css">
+    <link rel="stylesheet" href="./assets/css/Sections/aboutSection.css">
+    <link rel="stylesheet" href="./assets/css/Sections/homeSection.css">
+    <link rel="stylesheet" href="./assets/css/Sections/quoteSection.css">
+    <link rel="stylesheet" href="./assets/css/Functionality/HomeCarousel.css">
+    <link rel="stylesheet" href="./assets/css/Functionality/timeline.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel = "stylesheet" href = "./pageTransition.css"> 
 
@@ -41,7 +48,7 @@
                 <div class="col-12 text-center" data-aos="zoom-in" data-aos-duration="3000">
                     <div class="section-title">
                         <h1 >Reach out and let’s turn your <span style="color: gold; text-shadow: 2px 2px 1px gray;">tech</span> skills from 'Hello, World' to 'Im <span style="color: blueviolet; text-shadow: 2px 2px 1px gray;">Hired</span>'</h1>
-                        <div class="col-12 text-center mt-4" data-aos="fade-up" data-aos-delay="150">
+                        <div class="col-12 text-center mt-4" data-aos="fade-up" data-aos-delay="90">
                             <a href="https://wa.me/918591113931?text=I%20would%20like%20to%20know%20more%20details%20about%20YellowGap%20Education%20Society" class="btn btn-brand">Contact Us</a> 
                         </div>
                        
