--- a/about.html
+++ b/about.html
@@ -20,6 +20,10 @@
     <link rel="stylesheet" href="./assets/css/Functionality/HomeCarousel.css">
     <link rel="stylesheet" href="./assets/css/Functionality/timeline.css">
     <link rel="stylesheet" href="./assets/css/Functionality/reviewcards.css">
+    <link rel="stylesheet" href="./assets/css/Responsive/smallScreen.css">
+    <link rel="stylesheet" href="./assets/css/Responsive/smallMedScreen.css">
+    <link rel="stylesheet" href="./assets/css/Responsive/MediumScreen.css">
+    <link rel="stylesheet" href="./assets/css/Responsive/LargeScreen.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/pageTransition.css">
        
