--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="./assets/css/Responsive/smallScreen.css">
     <link rel="stylesheet" href="./assets/css/Responsive/smallMedScreen.css">
     <link rel="stylesheet" href="./assets/css/Responsive/MediumScreen.css">
+    <link rel="stylesheet" href="./assets/css/Responsive/LargeScreen.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel = "stylesheet" href = "./pageTransition.css"> 
 
