--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 
                                     <h1 class="display-1" style="font-weight: 700;">Detailed Web Development
                                         Curriculum Overview</h1>
-                                    <h4>Course - 1 Overview</h4>
+                                    <h4>Mastering web development technologies</h4>
                                     <h2 class=" display-1" style="font-weight: 300;">A detailed web development
                                         curriculum covers front-end technologies, frameworks, and back-end development
                                         (Node.js, Python). It includes database management, responsive design, version
@@ -209,7 +209,7 @@
                                 <div class="col-lg-7" data-aos="fade-left" data-aos-delay="90">
                                     <h1 class="display-1" style="font-weight: 700;">Operational Excellence
                                         Methodologies Processes </h1>
-                                    <h4>Course - 2 Overview</h4>
+                                    <h4>Optimizing processes for continuous improvement.</h4>
                                     <h2 class=" display-1" style="font-weight: 300;">Operational Excellence focuses on
                                         optimizing processes to improve efficiency, quality, and performance.
                                         Methodologies like Agile help streamline workflows, reduce waste, and enhance
@@ -230,7 +230,7 @@
                                 <div class="col-lg-7">
                                     <h1 class="display-1" style="font-weight: 700;">Mastering Emerging
                                         Technologies for Challenges</h1>
-                                    <h4>Course - 3 Overview</h4>
+                                    <h4>Embrace technology, drive innovation forward</h4>
                                     <h2 class=" display-1" style="font-weight: 300;">Mastering emerging technologies
                                         equips individuals with the skills to tackle modern challenges. By staying ahead
                                         of trends, you can adapt to evolving industries and drive innovation. Embracing
@@ -251,7 +251,7 @@
                                 <div class="col-lg-7">
                                     <h1 class=" display-1" style="font-weight: 700;">Building Innovative
                                         Progressive Web Applications </h1>
-                                    <h4>Course - 4 Overview</h4>
+                                    <h4>App-like web experiences</h4>
                                     <h2 class=" display-1" style="font-weight: 300;">Progressive Web Applications (PWAs)
                                         offer fast, offline-capable, app-like experiences on the web without needing app
                                         store downloads.Progressive Web Applications (PWAs) offer fast, offline-capable,
@@ -270,7 +270,7 @@
                                 <div class="col-lg-7">
                                     <h1 class="display-1" style="font-weight: 700;">Mastering Advanced Technical
                                         Programming Skills</h1>
-                                    <h4>Course - 5 Overview</h4>
+                                    <h4>Innovate through emerging technologies</h4>
                                     <h2 class=" display-1" style="font-weight: 300;">Mastering emerging technologies
                                         equips individuals with the skills to tackle modern challenges. By staying ahead
                                         of trends, you can adapt to evolving industries and drive innovation. Embracing
@@ -291,7 +291,7 @@
                                 <div class="col-lg-7">
                                     <h1 class="display-1" style="font-weight: 700;">Exploring Leading Edge Web
                                         Application Technologies</h1>
-                                    <h4>Course - 6 Overview</h4>
+                                    <h4>Master technology, drive innovation</h4>
                                     <h2 class=" display-1" style="font-weight: 300;">Mastering emerging technologies
                                         equips individuals with the skills to tackle modern challenges. By staying ahead
                                         of trends, you can adapt to evolving industries and drive innovation. Embracing
