--- a/contact.html
+++ b/contact.html
@@ -30,9 +30,15 @@
        
     
 </head>
-<div id="includeTransition"></div>
+<!-- <div id="includeTransition"></div> -->
 
-<body >
+<body>
+
+    <script src="./assets/js/pagetransition.js"></script>
+
+    <div id="preloader">
+        <img src="./assets/ImagesUpdated/giphy.gif" alt="Loading..." class="preloader-gif">
+    </div>
     <!-- <div class="loader" >
         <h1 class="text-center" data-aos="fade-down" data-aos-duration="1500"><i>Got questions? We’ve got answers and <br>some awkward silences.</i></h1> &nbsp;&nbsp;
     </div> -->
