--- a/instructors.html
+++ b/instructors.html
@@ -31,7 +31,13 @@
     
 </head>
 
-<body >
+<body>
+
+    <script src="./assets/js/pagetransition.js"></script>
+
+    <div id="preloader">
+        <img src="./assets/ImagesUpdated/giphy.gif" alt="Loading..." class="preloader-gif">
+    </div>
 
     <a href="https://wa.me/918591113931?text=I%20would%20like%20to%20know%20more%20details%20about%20YellowGap%20Education%20Society" class="float" target="_blank">
         <i class="fa fa-whatsapp my-float"></i>
@@ -43,7 +49,7 @@
     <div id="includeNavbar"></div>
     
 
-    <section id="about">
+    <section id="about" class="section-padding">
         <div class="container">
             <div class="row">
                 <div class="col-12 text-center" data-aos="fade-down" data-aos-duration="800">
@@ -67,7 +73,7 @@
                 <div class="col-lg-7" data-aos="fade-down" data-aos-delay="50">
                     <h4 class="text-center">Faculty: 1</h4>
                     <h1 id="quote">Harpreet Singh</h1>
-                        <div class="line"></div>
+                        <div class="instructorline"></div>
                         <h3>18+ Years Experience | AICTE Advisor | Career Shaper</h3>
                         <div>
                           <h2 class="text-center" style="padding: 0;">With 18 years in tech and 1,100 Careers shaped, Harpreet Singh knows how to keep you ahead. He makes tech Education relevant, fun, and effective.</h2>
@@ -129,7 +135,7 @@
                 <div class="col-lg-7" data-aos="fade-down" data-aos-delay="50">
                     <h4 class="text-center">Faculty: 2</h4>
                     <h1 id="quote">Deepak Yadav</h1>         
-                        <div class="line"></div>
+                        <div class="instructorline"></div>
                         <h3 class="text-center">14+ Years in Tech | Co-Founder | Cloud & DevOps Expert</h3>
                         <div class="line2"></div>
                         <h2 class="text-center">Deepak Yadav is all about cloud solutions and Kubernetes (maybe a little too much). As YellowGap's co-founder and a seasoned tech expert, he’s here to make sure you stay ahead!</h2>
