--- a/reviews.html
+++ b/reviews.html
@@ -84,7 +84,13 @@
     </style>
 </head>
 
-<body >
+<body>
+
+    <script src="./assets/js/pagetransition.js"></script>
+
+    <div id="preloader">
+        <img src="./assets/ImagesUpdated/giphy.gif" alt="Loading..." class="preloader-gif">
+    </div>
     <a href="https://wa.me/918591113931?text=I%20would%20like%20to%20know%20more%20details%20about%20YellowGap%20Education%20Society" class="float" target="_blank">
         <i class="fa fa-whatsapp my-float"></i>
         </a>
