--- a/courses.html
+++ b/courses.html
@@ -89,11 +89,11 @@
             <div class="progress-path">
                 <div class="progress-glow" id="progressGlow1"></div>
             </div>
-            <div class="milestone" style="left: 0%;" data-heading="Computer Basics" data-text="Understand how your computer works, it's components, and how to use them effectively." data-target="infoBox1">1</div>
-            <div class="milestone" style="left: 25%;" data-heading="Internet and It's Workings" data-text="Learn how the internet connects everything, from websites to online services, and how it all functions together." data-target="infoBox1">2</div>
-            <div class="milestone" style="left: 50%;" data-heading="Web Development Basics" data-text="Get hands-on with creating your first website. You’ll learn the basics of HTML, CSS, and how to make your pages look good and work properly." data-target="infoBox1">3</div>
-            <div class="milestone" style="left: 75%;" data-heading="Programming Fundamentals" data-text="Start your coding journey by learning the fundamentals. You'll get familiar with basic programming concepts to build your first projects." data-target="infoBox1">4</div>
-            <div class="milestone" style="left: 100%;" data-heading="Linux & Scripting" data-text="Discover Linux, a powerful operating system used by professionals. Learn scripting to automate tasks and make your workflow more efficient." data-target="infoBox1">5</div>
+            <div class="milestone" style="left: 0%;" data-heading="Computer Basics" data-text="Understand how your computer works, its components, and how to use them effectively." data-target="infoBox1">1</div>
+            <div class="milestone" style="left: 23.5%;" data-heading="Internet and Its Workings" data-text="Learn how the internet connects everything, from websites to online services, and how it all functions together." data-target="infoBox1">2</div>
+            <div class="milestone" style="left: 47%;" data-heading="Web Development Basics" data-text="Get hands-on with creating your first website. You’ll learn the basics of HTML, CSS, and how to make your pages look good and work properly." data-target="infoBox1">3</div>
+            <div class="milestone" style="left: 70.5%;" data-heading="Programming Fundamentals" data-text="Start your coding journey by learning the fundamentals. You'll get familiar with basic programming concepts to build your first projects." data-target="infoBox1">4</div>
+            <div class="milestone" style="left: 94%;" data-heading="Linux & Scripting" data-text="Discover Linux, a powerful operating system used by professionals. Learn scripting to automate tasks and make your workflow more efficient." data-target="infoBox1">5</div>
              <div class="info-box" id="infoBox1">
                 <h3>Computer Basics</h3>
                 <p>Understand how your computer works, it's components, and how to use them effectively.</p>
@@ -170,14 +170,13 @@
             <div class="progress-path">
                 <div class="progress-glow" id="progressGlow2"></div>
             </div>
-
             <div class="milestone" style="left: 0%;" data-heading="Frontend Development" data-text="Learn how to design beautiful, interactive websites using HTML, CSS, and JavaScript to create stunning front-end experiences." data-target="infoBox2">1</div>
-            <div class="milestone" style="left: 16.6%;" data-heading="Backend Development" data-text="Discover how websites work behind the scenes. Learn how to manage databases, servers, and APIs to deliver dynamic content." data-target="infoBox2">2</div>
-            <div class="milestone" style="left: 33.2%;" data-heading="Database Management" data-text="Learn how to organize, store, and retrieve data efficiently. Understand the basics of databases and how they power modern websites." data-target="infoBox2">3</div>
-            <div class="milestone" style="left: 49.8%;" data-heading="Cloud & Hosting" data-text="Explore cloud platforms and how to host websites. Learn how to deploy your projects on the web and make them accessible to everyone." data-target="infoBox2">4</div>
-            <div class="milestone" style="left: 66.4%;" data-heading="Containerization" data-text="Learn how to use Docker to package your apps and their dependencies. Ensure consistency across different environments for smooth deployment." data-target="infoBox2">5</div>
-            <div class="milestone" style="left: 83%;" data-heading="DevOps" data-text="Understand the collaboration between developers and operations. Learn automation tools to streamline building, testing, and deployment processes." data-target="infoBox2">6</div>
-            <div class="milestone" style="left: 100%;" data-heading="Git, GitHub & Actions" data-text="Master version control with Git, collaborate on projects using GitHub, and automate your workflow with GitHub Actions to improve productivity." data-target="infoBox2">7</div>
+            <div class="milestone" style="left: 15.6%;" data-heading="Backend Development" data-text="Discover how websites work behind the scenes. Learn how to manage databases, servers, and APIs to deliver dynamic content." data-target="infoBox2">2</div>
+            <div class="milestone" style="left: 31.2%;" data-heading="Database Management" data-text="Learn how to organize, store, and retrieve data efficiently. Understand the basics of databases and how they power modern websites." data-target="infoBox2">3</div>
+            <div class="milestone" style="left: 46.8%;" data-heading="Cloud & Hosting" data-text="Explore cloud platforms and how to host websites. Learn how to deploy your projects on the web and make them accessible to everyone." data-target="infoBox2">4</div>
+            <div class="milestone" style="left: 62.4%;" data-heading="Containerization" data-text="Learn how to use Docker to package your apps and their dependencies. Ensure consistency across different environments for smooth deployment." data-target="infoBox2">5</div>
+            <div class="milestone" style="left: 78%;" data-heading="DevOps" data-text="Understand the collaboration between developers and operations. Learn automation tools to streamline building, testing, and deployment processes." data-target="infoBox2">6</div>
+            <div class="milestone" style="left: 94%;" data-heading="Git, GitHub & Actions" data-text="Master version control with Git, collaborate on projects using GitHub, and automate your workflow with GitHub Actions to improve productivity." data-target="infoBox2">7</div>
 
             <div class="info-box" id="infoBox2">
                 <h3>Frontend Development</h3>
@@ -272,13 +271,13 @@
                 <div class="progress-glow" id="progressGlow3"></div>
             </div>
             <div class="milestone" style="left: 0%;" data-heading="APIs" data-text="Learn how APIs allow different applications to communicate with each other. Build and integrate APIs to enhance your projects functionality." data-target="infoBox3">1</div>
-            <div class="milestone" style="left: 14.3%;" data-heading="Data Structures & Algorithms (DSA)" data-text="Master key data structures and algorithms to optimize code for performance and tackle complex problems with ease." data-target="infoBox3">2</div>
-            <div class="milestone" style="left: 28.6%;" data-heading="Design Patterns" data-text="Learn about design patterns, the best practices for solving common coding problems. Use them to write efficient, maintainable code." data-target="infoBox3">3</div>
-            <div class="milestone" style="left: 42.9%;" data-heading="Security" data-text="Learn the essential techniques to protect your websites and applications from security breaches. Safeguard sensitive data and prevent attacks." data-target="infoBox3">4</div>
-            <div class="milestone" style="left: 57.2%;" data-heading="Web Performance" data-text="Optimize your website’s speed and performance to ensure a seamless user experience. Improve load times and boost your site’s efficiency." data-target="infoBox3">5</div>
-            <div class="milestone" style="left: 71.5%;" data-heading="Accessibility" data-text="Make your website accessible to everyone, including users with disabilities. Follow accessibility best practices to ensure an inclusive design." data-target="infoBox3">6</div>
-            <div class="milestone" style="left: 85.8%;" data-heading="UI/UX Design" data-text="Learn the principles of user interface (UI) and user experience (UX) design to create intuitive, visually appealing websites and apps." data-target="infoBox3">7</div>
-            <div class="milestone" style="left: 100%;" data-heading="System Design" data-text="Learn how to design scalable, reliable systems. Understand architectural decisions that support growth, performance, and efficiency in large projects." data-target="infoBox3">8</div>
+            <div class="milestone" style="left: 13.4%;" data-heading="Data Structures & Algorithms (DSA)" data-text="Master key data structures and algorithms to optimize code for performance and tackle complex problems with ease." data-target="infoBox3">2</div>
+            <div class="milestone" style="left: 26.8%;" data-heading="Design Patterns" data-text="Learn about design patterns, the best practices for solving common coding problems. Use them to write efficient, maintainable code." data-target="infoBox3">3</div>
+            <div class="milestone" style="left: 40.2%;" data-heading="Security" data-text="Learn the essential techniques to protect your websites and applications from security breaches. Safeguard sensitive data and prevent attacks." data-target="infoBox3">4</div>
+            <div class="milestone" style="left: 53.6%;" data-heading="Web Performance" data-text="Optimize your website’s speed and performance to ensure a seamless user experience. Improve load times and boost your site’s efficiency." data-target="infoBox3">5</div>
+            <div class="milestone" style="left: 67%;" data-heading="Accessibility" data-text="Make your website accessible to everyone, including users with disabilities. Follow accessibility best practices to ensure an inclusive design." data-target="infoBox3">6</div>
+            <div class="milestone" style="left: 80.4%;" data-heading="UI/UX Design" data-text="Learn the principles of user interface (UI) and user experience (UX) design to create intuitive, visually appealing websites and apps." data-target="infoBox3">7</div>
+            <div class="milestone" style="left: 94%;" data-heading="System Design" data-text="Learn how to design scalable, reliable systems. Understand architectural decisions that support growth, performance, and efficiency in large projects." data-target="infoBox3">8</div>
             <div class="info-box" id="infoBox3">
                 <h3>APIs</h3>
                 <p>Learn how APIs allow different applications to communicate with each other. Build and integrate APIs to enhance your projects functionality.</p>
