home-page-carousel-button

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/Main/navbar.css">
     <link rel="stylesheet" href="./assets/css/Main/footer.css">
+    <link rel="stylesheet" href="./assets/css/Sections/facultyInfo.css">
     <link rel="stylesheet" href="./assets/css/Sections/aboutSection.css">
     <link rel="stylesheet" href="./assets/css/Sections/homeSection.css">
     <link rel="stylesheet" href="./assets/css/Sections/quoteSection.css">
@@ -258,10 +259,7 @@
                                     <h1 class=" display-1" style="font-weight: 700;">Building Innovative
                                         Progressive Web Applications </h1>
                                     <h4>App-like web experiences</h4>
-                                    <h2 class=" display-1" style="font-weight: 300;">Progressive Web Applications (PWAs)
-                                        offer fast, offline-capable, app-like experiences on the web without needing app
-                                        store downloads.Progressive Web Applications (PWAs) offer fast, offline-capable,
-                                        app-like experiences on the web without needing app store downloads.</h2>
+                                    <h2 class=" display-1" style="font-weight: 300;">Progressive Web Applications (PWAs) deliver fast, offline-capable, app-like experiences on the web without needing app store downloads. Built using standard web technologies, they offer features like push notifications and home screen installation, providing seamless performance across devices. PWAs are easy to maintain, have a smaller storage footprint, and improve discoverability through search engines.</h2>
                                 </div>
                             </div>
                         </div>
@@ -298,28 +296,26 @@
                                     <h1 class="display-1" style="font-weight: 700;">Exploring Leading Edge Web
                                         Application Technologies</h1>
                                     <h4>Master technology, drive innovation</h4>
-                                    <h2 class=" display-1" style="font-weight: 300;">Mastering emerging technologies
-                                        equips individuals with the skills to tackle modern challenges. By staying ahead
-                                        of trends, you can adapt to evolving industries and drive innovation. Embracing
-                                        new tools and techniques ensures you're prepared for future demands. With the
-                                        right knowledge, you can lead and excel in solving today's complex problems.
+                                    <h2 class=" display-1" style="font-weight: 300;">Exploring leading-edge web application technologies involves examining innovations like Progressive Web Apps (PWAs) serverless architectures. These technologies enhance user experience by offering fast, responsive, and scalable solutions. 
                                     </h2>
                                 </div>
                             </div>
                         </div>
                     </div>
 
-
-                    <button class="carousel-control-prev" type="button" data-bs-target="#courseCarousel"
-                        data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#courseCarousel"
-                        data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-
-                    </button>
+                    <div class="button-container">
+                        <div>
+                            <button class="boton prev" type="button" data-bs-target="#courseCarousel" data-bs-slide="prev">
+                                <span aria-hidden="true">&#9664;</span>
+                            </button>
+                        </div>
+                        <div>
+                            <button class="boton next" type="button" data-bs-target="#courseCarousel" data-bs-slide="next">
+                                <span aria-hidden="true">&#9654;</span>
+                            </button>
+                        </div>
+                    </div>
+                    
 
                 </div>
             </div>
