--- a/instructors.html
+++ b/instructors.html
@@ -71,7 +71,7 @@
         <div class="container">
             <div class="row justify-content-between align-items-center">
                 <div class="col-lg-7" data-aos="fade-down" data-aos-delay="50">
-                    <h4 class="text-center">Faculty: 1</h4>
+                    <h4 class=" instructor-number text-center ">Faculty: 1</h4>
                     <h1 id="quote">Harpreet Singh</h1>
                         <div class="instructorline"></div>
                         <h3>18+ Years Experience | AICTE Advisor | Career Shaper</h3>
@@ -133,7 +133,7 @@
                     <img class="instructor-img" src="./assets/images/faculty2.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="col-lg-7" data-aos="fade-down" data-aos-delay="50">
-                    <h4 class="text-center">Faculty: 2</h4>
+                    <h4 class="instructor-number text-center">Faculty: 2</h4>
                     <h1 id="quote">Deepak Yadav</h1>         
                         <div class="instructorline"></div>
                         <h3 class="text-center">14+ Years in Tech | Co-Founder | Cloud & DevOps Expert</h3>
