--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@
                     <h3>Empower individuals with professional development</h3>
                     <h2 >and secured employment, supporting them in launching careers in the technology sector. Enabling people with expert professional development and assured employment, supporting them in launching thriving careers in the IT sector. </h2>
                     <div class="col-12 text-center mt-4" data-aos="fade-up" data-aos-delay="90">
-                        <a href="./contact.html" class="btn btn-brand">Contact Us</a> 
+                         <a href="https://octetrahul.app.n8n.cloud/form/707b4b73-6d12-47c7-a662-33451eea1f5c" class="btn btn-brand">Contact Us</a> 
                     </div>
                 </div>
             </div>
@@ -256,7 +256,7 @@
                         Don't delay, reach out to us now! Whether you have questions about our courses, need career guidance, or just want to chat, we're here to assist you. Whether you're curious about course details, seeking career advice, or simply want to connect, we're ready to help!
                     </h2>
                     <div data-aos="fade-up" data-aos-delay="90" class="col-12">
-                        <a href="./contact.html" class="btn btn-brand">Contact Us</a>
+                        <a href="https://octetrahul.app.n8n.cloud/form/707b4b73-6d12-47c7-a662-33451eea1f5c" class="btn btn-brand">Contact Us</a>
                     </div>
                 </div>
                 
