--- a/classroom.html
+++ b/classroom.html
@@ -248,7 +248,7 @@
                         Have questions about our courses, need career guidance, or just want to chat? We're here to support you! Don’t wait—connect with us now and take the next step toward your future in tech. Whatever you need, we're ready to help!
                     </h2>
                     <div data-aos="fade-up" data-aos-delay="90" class="col-12">
-                        <a href="./contact.html" class="btn btn-brand">Contact Us</a>
+                         <a href="https://octetrahul.app.n8n.cloud/form/707b4b73-6d12-47c7-a662-33451eea1f5c" class="btn btn-brand">Contact Us</a>
                     </div>
                 </div>
             </div>
