--- a/index.html
+++ b/index.html
@@ -447,13 +447,9 @@
                     <h3>Check out their experiences</h3>
                     <h2>
                         how to start, contact us now! Whether it's course details, career
-                        tips, or a general chat, we’re just a message away. how to start, contact us now! Whether it's
-                        course details, career
-                        tips, or a general chat, we’re just a message away. how to start, contact us now! Whether it's
-                        course details, career
                         tips, or a general chat, we’re just a message away.</h2>
                     <div data-aos="fade-up" data-aos-delay="90" class="col-12">
-                        <a href="./contact.html" class="btn btn-brand">Contact Us</a>
+                         <a href="https://octetrahul.app.n8n.cloud/form/707b4b73-6d12-47c7-a662-33451eea1f5c" class="btn btn-brand">Contact Us</a>
                     </div>
                 </div>
             </div>
