--- a/instructors.html
+++ b/instructors.html
@@ -229,7 +229,7 @@
                         Whether you have questions about our courses, need career advice, or just want to chat, we’re here to help! Don’t miss the opportunity—get in touch with us today and start your journey toward success in tech.
                     </h2>
                     <div data-aos="fade-up" data-aos-delay="90" class="col-12">
-                        <a href="./contact.html" class="btn btn-brand">Contact Us</a>
+                         <a href="https://octetrahul.app.n8n.cloud/form/707b4b73-6d12-47c7-a662-33451eea1f5c" class="btn btn-brand">Contact Us</a>
                     </div>
                 </div>
             </div>
