--- a/reviews.html
+++ b/reviews.html
@@ -250,7 +250,7 @@
                         Have questions about our programs, need career guidance, or just want to have a conversation? We’re here to assist you every step of the way. Reach out today and start shaping your future in tech with us!
                     </h2>
                     <div data-aos="fade-up" data-aos-delay="90" class="col-12">
-                        <a href="./contact.html" class="btn btn-brand">Contact Us</a>
+                         <a href="https://octetrahul.app.n8n.cloud/form/707b4b73-6d12-47c7-a662-33451eea1f5c" class="btn btn-brand">Contact Us</a>
                     </div>
                 </div>
             </div>
